# cpp-spreadsheet

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  reinstall-clang.sh
cmake/: SetupAntlr.cmake  SetupTargets.cmake  compile_settings.cmake  develop.cmake  install.cmake  install_antlr.cmake  setup_antlr.cmake  setup_doctest.cmake  setup_targets.cmake  setup_tests.cmake  utils.cmake
design/: FormulaAST.h  cache_invalidation.drawio  cell.h  cyclic_dependencies.drawio  formula.h  formula_calculation.drawio  new_cell.drawio  sheet.h
include/: FormulaAST.h  cell.h  common.h  formula.h  graph.h  ranges.h  sheet.h  spreadsheet.h
include/spreadsheet/: spreadsheet.h
spreadsheet/: CMakeLists.txt  FindANTLR.cmake  Formula.g4  FormulaAST.cpp  FormulaAST.h  cell.cpp  cell.h  common.h  formula.cpp  graph.h  main.cpp  ranges.h  sheet.cpp  sheet.h
spreadsheet/antlr/grammar/: Formula.g4
spreadsheet/antlr4_runtime/runtime/: cmake_install.cmake
spreadsheet/cmake/: FindANTLR.cmake  SetupAntlr.cmake  SetupTargets.cmake  download_antlr.cmake
src/: FormulaAST.cpp  FormulaAST.h  cell.cpp  cell.h  common.h  formula.cpp  formula.h  main.cpp  ranges.h  sheet.cpp  structures.cpp
src/test_utils/: test_runner_p.h
src/tests/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp  test_main.cpp  test_spreadsheet.cpp
